# Umbra

./: CMakeLists.txt  CMakeLists.txt~  License.txt  README
clients/: client-ccd.c  client-count.c  client-dep-detect.c  client-fsd.c  client-null-1-to-1.c  client-null-1-to-4.c  client-null-1B-to-2b.c  client-null-4-to-1.c  client-pdg-simple.c  client-race-detect.c  client-share-count.c  client-share-detect.c  client-tcd.c
core/: analyzer.c  analyzer.h  cfg.c  dr_client.c  global.h  instrument.c  instrument.h  optimize.c  shadow.c  shadow.h  table.c  table.h  umbra.c  umbra.h  utils.c  utils.h
test/: micro-bench-linux.c  micro-bench.c  run-umbra.txt  test-fsd.c  test-scan-pthread.c  test-scan.c
